# ctypesForFortran

./: .gitignore  README.md  pyproject.toml
src/ctypesForFortran/: __init__.py
tests/: test.sh
tests/data/: auto_signature.py
